# LanShareCPP-v2

./: .gitignore
backend/: CMakeLists.txt
backend/bridge/: MessageHandler.cpp  MessageHandler.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
backend/client/: ClientCore.cpp  ClientCore.h  main.cpp
backend/common/: AESGCM.cpp  AESGCM.h  Protocol.h
backend/server/: AuthManager.cpp  AuthManager.h  ClientSession.cpp  ClientSession.h  GroupManager.cpp  GroupManager.h  MessageRouter.cpp  MessageRouter.h  ServerCore.cpp  ServerCore.h  main.cpp
frontend/: electron.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatArea.jsx  Sidebar.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: ChatPage.jsx  LoginPage.jsx
frontend/src/store/: chatStore.js
